# marker_alignment

./: .emacs  .gitignore  CMakeLists.txt  README.md
marker_alignment/: CMakeLists.txt
marker_alignment/apps/: CMakeLists.txt  CameraIntrinsics.h  CameraState.h  MarkerAlignmentProblem.h  MockData.h  Pose.h  main.cpp  math_constants.h  se3_ops.h  se3quat.h
marker_alignment/apps/visualization/: Viewer3D.cpp  Viewer3D.h  ViewerButton.h  ViewerColors.h
marker_alignment/lib/MathHelper/: se3_ops.h  se3quat.h
marker_alignment/lib/visualization/: CMakeLists.txt  Viewer3D.cpp  Viewer3D.h  ViewerButton.h  ViewerColors.h
